crates/cribo/tests/snapshots/execution_results@builtin_types.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/builtin_types/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Loading compat module...\nAll tests passed!",
    stderr: "",
}
