crates/cribo/tests/snapshots/execution_results@builtin_types_circular.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/builtin_types_circular/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Result: Processed 4 bytes\nSuccess!",
    stderr: "",
}
