crates/cribo/tests/snapshots/execution_results@circular_import_from_init.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/circular_import_from_init/main.py
---
ExecutionResults {
    status: Success,
    stdout: "console",
    stderr: "",
}
