crates/cribo/tests/snapshots/execution_results@circular_symbol_usage.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/circular_symbol_usage/main.py
---
ExecutionResults {
    status: Success,
    stdout: "A: Value from B",
    stderr: "",
}
