crates/cribo/tests/snapshots/execution_results@collections_abc_modules.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/collections_abc_modules/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Result: Mutable mapping with 2 items\nOrderedDict is MutableMapping: True",
    stderr: "",
}
