crates/cribo/tests/snapshots/execution_results@collections_abc_test.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/collections_abc_test/main.py
---
ExecutionResults {
    status: Success,
    stdout: "OrderedDict is a MutableMapping: True\nOrderedDict contents: {'a': 1, 'b': 2}",
    stderr: "",
}
