crates/cribo/tests/snapshots/execution_results@collections_mixed_imports.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/collections_mixed_imports/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Module A initializing...\nModule B initializing...\nResult: Yes, it's a MutableMapping with 3 items",
    stderr: "",
}
